# CLD

./: .gitignore  README.md  README_pypi.md  analyze_cv.py  benchmark_cld.py  cronos_trainer.py  data_ingestion.py  defrun.py  download_cv.py  download_cv_input.txt  jaxtest.py  process_input_three_ways.py  pyproject.toml  requirements.txt  run_whisper_training.sh  train_cvxnn.py  train_linear_svm.py  train_nn.py  train_nn_cld.py  train_whisper.py  whisper_training.py
asr_pipeline/: asr_test2.py  detect_trainer.sh  detect_trainer2.py
cld/: __init__.py
cld/models/: __init__.py  asr_model.py  get_model.py  lang_detect_head.py
cld/optimizers/: __init__.py  admm.py
cld/optimizers/dist_shampoo/: __init__.py
cld/preconditioner/: __init__.py
cld/training/: train.py
cld/utils/: model_utils.py
configs/: en_hi_config.json  en_hi_config_diverse.json  en_hi_config_dry.json  en_hi_config_mix.json  en_zh_config.json  final_config.json  random_config.json
configs/lr_exp/: 10000_config.json  1000_config.json  500_config.json
configs/lr_exp_dry/: 100_config.json  50_config.json
docs/: index.html
jaxcld/: __init__.py
jaxcld/models/: __init__.py  cvx_grelu_mlp.py  cvx_relu_mlp.py
jaxcld/optimizers/: shampoo.py
jaxcld/optimizers/dist_shampoo/: distributed_shampoo.py
jaxcld/preconditioner/: nystrom.py
jaxcld/training/: __init__.py  train_no_jit.py
jaxcld/utils/: __init__.py  load_data.py  metric_utils.py
scripts/: benchmark_cvxnn_lr_exp.sh  lr_exp.sh  lr_exp_bench_only.sh  lr_exp_dry.sh  multi_models.sh  push_models_to_hf.py  random.sh  train_and_benchmark_cvxnn.sh  train_and_benchmark_linear_svm.sh  train_and_benchmark_linear_svm_lr_exp.sh  train_and_benchmark_lr_exp_cvxnn.sh  zh-exp.sh
solve/experiments/: lr_experiment.py
solve/models/: asr_model.py  cvx_grelu_mlp.py  cvx_mlp.py  cvx_relu_mlp.py  lang_detect_head.py  load_whisper_pipeline.py
solve/optimizers/: admm.py
solve/preconditioner/: nystrom.py
solve/utils/: gpt2_dataloader.py  gpt2_runnerall.py  metric_utils.py  opt_utils.py  typing_utils.py  whisper_dataloader.py
test/.claude-will/: .claude.json  .credentials.json  .last-cleanup  history.jsonl  mcp-needs-auth-cache.json
test/.claude-will/backups/: .claude.json.backup.1780203880138  .claude.json.backup.1780204771038
test/.claude-will/file-history/e2cb8342-cbb1-4bc5-ba62-63c4c5062941/: 4d637422fee3a694@v1  9d5328055fb22a40@v1  9d5328055fb22a40@v2  9d5328055fb22a40@v3
test/.claude-will/projects/-home-ubuntu-CLD/: e2cb8342-cbb1-4bc5-ba62-63c4c5062941.jsonl
tests/: conftest.py  test_asr_and_heads_real.py  test_final_dry_asr_and_heads.py  test_hf_pretrained_heads.py
